# GWaveFX

./: .gitignore  CMakeLists.txt  auto-setup.bat
src/: FFT.cpp  FFT.h  Main.cpp  View.h  Vulkan.h
src/Shaders/: frag.spv  quad.frag
